--- a/.local/share/applications/com.brave.Browser.flextop.brave-cadlkienfkclaiaibeoongdcgmdikeeg-Default.desktop
+++ b/.local/share/applications/com.brave.Browser.flextop.brave-cadlkienfkclaiaibeoongdcgmdikeeg-Default.desktop
@@ -6,6 +6,8 @@ Type=Application
 Name=ChatGPT
 Exec=flatpak 'run' '--command=brave' 'com.brave.Browser' '--profile-directory=Default' '--app-id=cadlkienfkclaiaibeoongdcgmdikeeg'
 Icon=brave-cadlkienfkclaiaibeoongdcgmdikeeg-Default
-StartupWMClass=crx_cadlkienfkclaiaibeoongdcgmdikeeg
+# StartupWMClass=crx_cadlkienfkclaiaibeoongdcgmdikeeg
+StartupWMClass=brave-cadlkienfkclaiaibeoongdcgmdikeeg-Default
+StartupNotify=false
 X-Flatpak-Part-Of=com.brave.Browser
 TryExec=/var/lib/flatpak/exports/bin/com.brave.Browser
