--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -46,6 +46,11 @@ background-opacity = 0.9
 cursor-style = bar
 shell-integration-features = no-cursor
 app-notifications = no-clipboard-copy
+copy-on-select = clipboard
+clipboard-paste-protection = false
+window-width = 120
+window-height = 30
+
 keybind = ctrl+shift+r=reload_config
 keybind = ctrl+v=paste_from_clipboard
 keybind = performable:ctrl+c=copy_to_clipboard
